tests/test_files_pa3/new/SemanticErrors/LocationsTest.ic
class A
{
	int[] arr;
	
	void vfunc(int x){
		arr = new int[x];
		arr[0] = x;
	}
}

class B
{
	A a;
	
	void sfunc(){
		a = new A();
	}
}

class C
{

	static void main(string[] args) { }
	
	void ufunc(int y)
	{
		int x;
		string s;
		B b = new B();
		
		b.sfunc();
		b.a.vfunc(y);
		
		x = b.a.arr[0];
		s = b.a.arr[0];
	}
}